--- a/422-raster-tunnel-mikroskopie/latex/anhang.tex
+++ b/422-raster-tunnel-mikroskopie/latex/anhang.tex
@@ -20,6 +20,8 @@
 
 \jafpsh{res/hopg_165}{RTM-Aufnahme ($\SI{4.4}{\nano\meter}$, Stromdarstellung), $v_R = \SI{157.19}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{751}{\nano\ampere}$, $P=0$, $I=4$}{0.4}
 
+\jafpsh{res/hopg_166_lattice}{Gleiche Aufnahme wie Abbildung \ref{fig:res/hopg_166_with_lines}, mit Kristallgitter eingezeichnet.}{0.4}
+
 \section{RTM-Aufnahmen der \moszwei-Probe}
 
 \jafpsh{res/mos2_169}{RTM-Aufnahme ($\SI{68}{\nano\meter}$, z-Darstellung), $v_R = \SI{340.0}{\nano\meter\per\second}$, $I_\text{Setpoint} = \SI{1}{\nano\ampere}$, $P=1000$, $I=2000$}{0.4}
