--- a/422-raster-tunnel-mikroskopie/latex/einleitung.tex
+++ b/422-raster-tunnel-mikroskopie/latex/einleitung.tex
@@ -30,7 +30,7 @@ Der resultierende Tunnelstrom ist hängt exponentiell vom Abstand ab und ist seh
 \end{align}
 
 
-Wobei z der Abstand von Spitze zu Probe darstellt. \todo{geschlossene form für Strom. ggf gerthsen S.708/709}
+Wobei z der Abstand von Spitze zu Probe darstellt.
 
 
 
@@ -65,3 +65,7 @@ Es besteht die Möglichkeit dem Integralterm eine Integrationsuntergrenze, $t - 
 Im konstanten Höhen Modus (CHM) werden die Parameter so gewählt, dass der Sollpunkt möglichst exakt und stabil eingehalten wird, also dem Höhenprofil in gleichmäßigem Abstand gefolgt wird.
 
 Wird der Proportionalfakor auf Null gesetzt und die Integrationszeit sehr lang gewählt, folgt die Spitze nur noch der generellen Tendenz oder Schieflage der Oberfläche, nicht mehr aber Unebenheiten. Dies entspricht dem Wechsel vom konstanten Strom Modus (CCM) zum CHM. \cite{Versuchsanleitung422}
+
+\subsection{Spitze}
+
+Die Herstellung der Spitzen erfolgt aus einem Platin-Iridium Draht mit einem Durchmesser von $\SI{0.3}{\milli\meter}$\cite{Versuchsanleitung422}. Dieser wird so abgerissen, dass möglichst eine schräge Risskante entsteht. Hierbei ist die Hoffnung, dass durch das Reissen ein Atom eindeutig zuvorderst liegt und somit eine einatomige Spitze bildet. Der Erfolg dieses Prozederes kann nur über die Güte der RTM Aufnahmen bestimmt werden.
