--- a/422-raster-tunnel-mikroskopie/latex/gold.tex
+++ b/422-raster-tunnel-mikroskopie/latex/gold.tex
@@ -11,7 +11,7 @@ Auf der glatten Si- oder Saphir-Oberfläche sind daher kleine Goldkügelchen ohn
 
 \subsection{Verwendete RTM-Spitze und Proben}
 
-Zunächst werden die beiden Goldproben sowie die verwendete Spitze mit dem USB-Mikroskop dokumentiert. Durch letzteres kann zwar keine quantitative Einschätzung der Qualität der Spitze liefern (dafür müsste das Mikroskop atomare Auflösung haben, da dies die ideale Dicke der Spitze ist), kann aber einen guten Anhaltspunkt liefern, ob der Reißvorgang bei der Spitzenpräperation wie erwünscht eine schräge Kante entstanden ist\footnote{Eine schräge Kante erhöht dich Chance auf eine Atomar dünne Spitze, kann aber keine konkrete Aussage treffen}. Es werden zunächst mehrere Spitzen ausprobiert, gute RTM-Aufnahmen liefert jedoch nur eine der Spitzen. Diese ist in Abb. \ref{fig:spitze_4_scaled.pdf} in einer USB-Mikroskop-Aufnahme abgebildet ist.
+Zunächst werden die beiden Goldproben sowie die verwendete Spitze mit dem USB-Mikroskop dokumentiert. Durch letzteres kann zwar keine quantitative Einschätzung der Qualität der Spitze liefern (dafür müsste das Mikroskop atomare Auflösung haben, da dies die ideale Dicke der Spitze ist), kann aber einen guten Anhaltspunkt liefern, ob der Reißvorgang bei der Spitzenpräperation wie erwünscht eine schräge Kante entstanden ist\footnote{Eine schräge Kante erhöht dich Chance auf eine Atomar dünne Spitze, kann aber keine konkrete Aussage treffen}. Es werden zunächst mehrere Spitzen ausprobiert, gute RTM-Aufnahmen liefert jedoch nur eine der Spitzen. Diese ist in Abb. \ref{fig:spitze_4_scaled.pdf} in einer USB-Mikroskop-Aufnahme abgebildet.
 
 \jafps{spitze_4_scaled.pdf}{USB-Mikroskopaufnahme der für die RTM-Aufnahmen genutzten Spitze. Der eingezeichnete Maßstab ergibt sich aus dem Durchmesser des genutzten Platin-Iridium-Draht von $r=\SI{0.3}{\milli\meter}$ \cite[8]{Versuchsanleitung422}. Zum Einfügen des Maßstabs wurde das Bildbearbeitungsprogramm GIMP \cite{gimp} genutzt.}{0.4}
 
