--- a/422-raster-tunnel-mikroskopie/latex/template.tex
+++ b/422-raster-tunnel-mikroskopie/latex/template.tex
@@ -127,6 +127,6 @@
 
 \titlehead{\centering\includegraphics[width=0.6\textwidth]{mos2_usb.jpg}} %for a title picture
 \graphicspath{{../figs/}}
-\author{Leonie Dessau \& Lena Beckmann}
+\author{names in here}
 
 \setlength\parindent{0pt}
