--- a/442-laser/latex/template.tex
+++ b/442-laser/latex/template.tex
@@ -106,6 +106,6 @@
 
 \titlehead{\centering\includegraphics[width=0.8\textwidth]{laser_pretty.jpeg}}
 \graphicspath{{../figs/}}
-\author{Leonie Dessau \& Lena Beckmann}
+\author{names}
 
 \setlength\parindent{0pt}
