--- a/402-quantenlung-von-energie/latex/template.tex
+++ b/402-quantenlung-von-energie/latex/template.tex
@@ -14,13 +14,13 @@
 \usepackage{siunitx}
 
 \sisetup{
- separate-uncertainty = true,
- multi-part-units=brackets, 
- number-unit-product = \text{ }, 
- mode=math, 
- exponent-product = \cdot, 
- output-product = \cdot,
- output-decimal-marker = {,}
+	separate-uncertainty = true,
+	multi-part-units=brackets,
+	number-unit-product = \text{ },
+	mode=math,
+	exponent-product = \cdot,
+	output-product = \cdot,
+	output-decimal-marker = {,}
 }
 
 \usepackage{ circuitikz }
@@ -54,7 +54,7 @@
 
 \def\jafps#1#2#3{
 	\begin{figure}[H]
-    \centering
+		\centering
 		\includegraphics[width=#3\textwidth]{#1}
 		%\includegraphics[height=0.4\textheight]{#1}
 		\captionof{figure}{#2}
@@ -107,5 +107,5 @@
 
 \usepackage{graphicx}
 \graphicspath{{./figs/}}
-\author{Leonie Dessau \& Lena Beckmann}
+\author{names}
 \setlength\parindent{0pt}
